<resources>
    <string name="app_name">Supervisorio Android</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>

    <string name="grafico">Grafico</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>

    <string name="c">ºC</string>
    <string name="mmh_o">mmH²O</string>
    <string name="nm_3">NM³</string>

    <string name="topo">Topo</string>
    <string name="coroa">Coroa</string>

    <string name="saida1">S1</string>
    <string name="saida2">S2</string>
    <string name="saida3">S3</string>
    <string name="cq1">CQ 1</string>
    <string name="cq2">CQ 2</string>
    <string name="cq3">CQ 3</string>
    <string name="_vazao">Vazão</string>
    <string name="_pslm">Pressão sala de maquinas</string>

    <string name="slide_page">Slide Page</string>
    <string name="glendon_fire">Glendon</string>

    <string name="title_activity_glendon">ActivityGlendon</string>
    <string name="title_home">Alto Forno</string>
    <string name="title_dashboard">SLM</string>
    <string name="title_notifications">Glendons</string>
    <string name="title_activity_nav_bar">Supervisorio</string>
    <string name="title_grafico">Graficos</string>
    <string name="title_carregamento">Garregamento</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>