<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_alto_forno"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_glendon"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_sala_de_maquina"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_grafico"
        android:icon="@drawable/ic_grafico"
        android:title="@string/title_grafico" />
    <item
        android:id="@+id/navigation_carregamento"
        android:icon="@drawable/ic_carregamento"
        android:title="@string/title_carregamento" />

</menu>