<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <ImageView
        android:id="@+id/fullscreen_slm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:scaleX="1.13"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/img_fundo" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_slm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/layout_vazao"
            android:layout_width="191dp"
            android:layout_height="95dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewVazao"
                android:layout_width="189dp"
                android:layout_height="45dp"
                android:background="@drawable/my_boxgradient"
                android:fontFamily="serif"
                android:text="@string/_vazao"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="191dp"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_vazao"
                    style="@style/Theme.Information.Henrique"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:background="@drawable/my_information_text"

                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/textViewCoroa3"
                    style="@style/Theme.Sufixo.Henrique"
                    android:layout_width="97dp"
                    android:layout_height="45dp"
                    android:background="@drawable/my_box"
                    android:text="@string/nm_3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pslm"
            android:layout_width="191dp"
            android:layout_height="95dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_vazao">

            <TextView
                android:id="@+id/textViewPSLM"
                android:layout_width="189dp"
                android:layout_height="45dp"
                android:background="@drawable/my_boxgradient"
                android:fontFamily="serif"
                android:text="@string/_pslm"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="191dp"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_pslm"
                    style="@style/Theme.Information.Henrique"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:background="@drawable/my_information_text"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/textViewPSLM2"
                    style="@style/Theme.Sufixo.Henrique"
                    android:layout_width="97dp"
                    android:layout_height="45dp"
                    android:background="@drawable/my_box"
                    android:text="@string/mmh_o" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>